Migrated MatchmakingGraph across from game1666proto4.

--- a/game1666/game1666Test/game1666Test.csproj
+++ b/game1666/game1666Test/game1666Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Common\ADTs\PriorityQueueTest.cs" />
     <Compile Include="Common\AStar\AStarSearcherTest.cs" />
     <Compile Include="Common\Entities\EntityTest.cs" />
+    <Compile Include="Common\Matchmaking\MatchmakingGraphTest.cs" />
     <Compile Include="Common\Maths\TriangleTest.cs" />
     <Compile Include="Common\Maths\Vector2iTest.cs" />
     <Compile Include="Common\Persistence\PropertyPersisterTest.cs" />
