--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Common\UI\Renderer.cs" />
     <Compile Include="GameModel\Entities\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Entities\Blueprints\BlueprintManager.cs" />
+    <Compile Include="GameModel\Entities\Extensions\IModelEntityExtensions.cs" />
     <Compile Include="GameModel\Entities\Lifetime\ModelEntityFactory.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\Footprint.cs" />
     <Compile Include="GameModel\Entities\Blueprints\PlaceableBlueprint.cs" />
@@ -163,7 +164,7 @@
     <Compile Include="GameModel\Entities\Navigation\ModelEntityNavigationNode.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Entities\Util\ModelContextExtensions.cs" />
+    <Compile Include="GameModel\Entities\Components\Extensions\ModelEntityComponentExtensions.cs" />
     <Compile Include="GameModel\Navigation\INavigationNode.cs" />
     <Compile Include="GameModel\Navigation\NavigationMap.cs" />
     <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
@@ -182,7 +183,7 @@
     <Compile Include="GameUI\Entities\Components\Common\RenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Components\Sidebar\SidebarRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Lifetime\UIEntityFactory.cs" />
-    <Compile Include="GameUI\Entities\Util\UIContextExtensions.cs" />
+    <Compile Include="GameUI\Entities\Components\Extensions\UIContextExtensions.cs" />
     <Compile Include="GameUI\Entities\Base\IUIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntityComponent.cs" />
