--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -132,6 +132,7 @@
     <Compile Include="GameModel\Entities\Base\IModelEntity.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
+    <Compile Include="GameModel\Entities\Blueprints\MobileBlueprint.cs" />
     <Compile Include="GameModel\Entities\Components\External\MobileComponent.cs" />
     <Compile Include="GameModel\Entities\Components\External\TraversableComponent.cs" />
     <Compile Include="GameModel\Entities\Components\Context\ModelContextComponent.cs" />
