Started refactoring the model entity components.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -134,11 +134,11 @@
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="GameModel\Entities\Blueprints\MobileBlueprint.cs" />
-    <Compile Include="GameModel\Entities\Components\External\MobileComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\External\TraversableComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\Context\ModelContextComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\Internal\PersonComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\Test\TestComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\MobileComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\TraversableComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\ModelContextComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\PersonComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\TestComponent.cs" />
     <Compile Include="Common\Maths\Constants.cs" />
     <Compile Include="Common\Maths\MathUtil.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
@@ -156,10 +156,10 @@
     <Compile Include="GameModel\Entities\Lifetime\ModelEntityFactory.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\Footprint.cs" />
     <Compile Include="GameModel\Entities\Blueprints\PlaceableBlueprint.cs" />
-    <Compile Include="GameModel\Entities\Components\External\ExternalComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\Internal\InternalComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\External\PlaceableComponent.cs" />
-    <Compile Include="GameModel\Entities\Components\Internal\PlayingAreaComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\ExternalComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\InternalComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\PlaceableComponent.cs" />
+    <Compile Include="GameModel\Entities\Components\PlayingAreaComponent.cs" />
     <Compile Include="GameModel\Entities\Lifetime\ModelEntityDestructionManager.cs" />
     <Compile Include="GameModel\Entities\Messages\ModelEntityDestructionMessage.cs" />
     <Compile Include="GameModel\Entities\Messages\ModelEntityPreDestructionMessage.cs" />
@@ -168,7 +168,7 @@
     <Compile Include="GameModel\Entities\Navigation\ModelEntityNavigationNode.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Entities\Components\Extensions\ModelEntityComponentExtensions.cs" />
+    <Compile Include="GameModel\Entities\Components\ModelEntityComponentExtensions.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskFactory.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskGoToPosition.cs" />
     <Compile Include="GameModel\Navigation\INavigationNode.cs" />
