Started refactoring the UI entity components.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -180,25 +180,25 @@
     <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
     <Compile Include="GameModel\Terrains\Terrain.cs" />
     <Compile Include="GameUI\Entities\Base\IUIEntityFactory.cs" />
-    <Compile Include="GameUI\Entities\Components\Button\ButtonInteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Common\CompositeInteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Common\InteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Context\UIContextComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\GameView\GameViewStateComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Play\PlayInteractionComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Button\ButtonRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Common\CompositeRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Play\PlayRenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Common\RenderingComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Sidebar\SidebarRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\ButtonInteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\CompositeInteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\InteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\UIContextComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\GameViewStateComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\PlayInteractionComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\ButtonRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\CompositeRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\PlayRenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\RenderingComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\SidebarRenderingComponent.cs" />
     <Compile Include="GameUI\Entities\Lifetime\UIEntityFactory.cs" />
-    <Compile Include="GameUI\Entities\Components\Extensions\UIContextExtensions.cs" />
+    <Compile Include="GameUI\Entities\Components\UIContextExtensions.cs" />
     <Compile Include="GameUI\Entities\Base\IUIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntity.cs" />
     <Compile Include="GameUI\Entities\Base\UIEntityComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Play\PlayStateComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Sidebar\SidebarStateComponent.cs" />
-    <Compile Include="GameUI\Entities\Components\Common\StateComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\PlayStateComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\SidebarStateComponent.cs" />
+    <Compile Include="GameUI\Entities\Components\StateComponent.cs" />
     <Compile Include="GameUI\GameViewManager.cs" />
     <Compile Include="GameUI\Tools\EntityDeletionTool.cs" />
     <Compile Include="GameUI\Tools\EntityPlacementTool.cs" />
