Did yet more refactoring of the model entity components and succeeded in making the graph acyclic again.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -123,19 +123,22 @@
     <Compile Include="Common\Tasks\PriorityQueueTask.cs" />
     <Compile Include="Common\Tasks\RetryTask.cs" />
     <Compile Include="Common\Util\GreaterComparer.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\IExternalComponent.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\IModelContextComponent.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\IPlaceableComponent.cs" />
     <Compile Include="GameModel\Entities\Base\IModelEntityDestructionManager.cs" />
     <Compile Include="GameModel\Entities\Base\IModelEntityFactory.cs" />
     <Compile Include="GameModel\Entities\Base\ITaskFactory.cs" />
     <Compile Include="GameModel\Entities\Base\ModelEntity.cs" />
     <Compile Include="Common\Entities\Entity.cs" />
-    <Compile Include="GameModel\Entities\Base\ModelEntityComponent.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\ModelEntityComponent.cs" />
     <Compile Include="Common\Entities\EntityComponent.cs" />
     <Compile Include="GameModel\Entities\Base\IModelEntity.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="GameModel\Entities\Blueprints\MobileBlueprint.cs" />
-    <Compile Include="GameModel\Entities\Components\ModelEntityComponentGroups.cs" />
-    <Compile Include="GameModel\Entities\Components\IPlayingAreaComponent.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\ModelEntityComponentGroups.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\IPlayingAreaComponent.cs" />
     <Compile Include="GameModel\Entities\Components\MobileComponent.cs" />
     <Compile Include="GameModel\Entities\Components\TraversableComponent.cs" />
     <Compile Include="GameModel\Entities\Components\ModelContextComponent.cs" />
@@ -166,13 +169,13 @@
     <Compile Include="GameModel\Entities\Messages\ModelEntityDestructionMessage.cs" />
     <Compile Include="GameModel\Entities\Messages\ModelEntityPreDestructionMessage.cs" />
     <Compile Include="GameModel\Entities\Messages\ModelEntitySpawnMessage.cs" />
-    <Compile Include="GameModel\Entities\Navigation\ModelEntityNavigationMap.cs" />
     <Compile Include="GameModel\Entities\Navigation\ModelEntityNavigationNode.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Entities\Components\ModelEntityComponentExtensions.cs" />
+    <Compile Include="GameModel\Entities\AbstractComponents\ModelEntityComponentExtensions.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskFactory.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskGoToPosition.cs" />
+    <Compile Include="GameModel\Navigation\INavigationMap.cs" />
     <Compile Include="GameModel\Navigation\INavigationNode.cs" />
     <Compile Include="GameModel\Navigation\NavigationMap.cs" />
     <Compile Include="Common\Tasks\Task.cs" />
