--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -123,22 +123,22 @@
     <Compile Include="Common\Tasks\PriorityQueueTask.cs" />
     <Compile Include="Common\Tasks\RetryTask.cs" />
     <Compile Include="Common\Util\GreaterComparer.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\IExternalComponent.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\IMobileComponent.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\IModelContextComponent.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\IPlaceableComponent.cs" />
-    <Compile Include="GameModel\Entities\Base\IModelEntityDestructionManager.cs" />
-    <Compile Include="GameModel\Entities\Base\IModelEntityFactory.cs" />
-    <Compile Include="GameModel\Entities\Base\ITaskFactory.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Components\IExternalComponent.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Components\IMobileComponent.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Components\IModelContextComponent.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Components\IPlaceableComponent.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Context\IModelEntityDestructionManager.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Context\IModelEntityFactory.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Context\ITaskFactory.cs" />
     <Compile Include="GameModel\Entities\Base\ModelEntity.cs" />
     <Compile Include="Common\Entities\Entity.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\ModelEntityComponent.cs" />
+    <Compile Include="GameModel\Entities\Base\ModelEntityComponent.cs" />
     <Compile Include="Common\Entities\EntityComponent.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
     <Compile Include="Common\Entities\IEntityComponent.cs" />
     <Compile Include="GameModel\Entities\Blueprints\MobileBlueprint.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\ModelEntityComponentGroups.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\IPlayingAreaComponent.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Components\ModelEntityComponentGroups.cs" />
+    <Compile Include="GameModel\Entities\Interfaces\Components\IPlayingAreaComponent.cs" />
     <Compile Include="GameModel\Entities\Components\MobileComponent.cs" />
     <Compile Include="GameModel\Entities\Components\TraversableComponent.cs" />
     <Compile Include="GameModel\Entities\Components\ModelContextComponent.cs" />
@@ -157,7 +157,7 @@
     <Compile Include="Common\UI\Renderer.cs" />
     <Compile Include="GameModel\Entities\Blueprints\Blueprint.cs" />
     <Compile Include="GameModel\Entities\Blueprints\BlueprintManager.cs" />
-    <Compile Include="GameModel\Entities\Extensions\IModelEntityExtensions.cs" />
+    <Compile Include="GameModel\Entities\Extensions\ModelEntityExtensions.cs" />
     <Compile Include="GameModel\Entities\Lifetime\ModelEntityFactory.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\Footprint.cs" />
     <Compile Include="GameModel\Entities\Blueprints\PlaceableBlueprint.cs" />
@@ -170,7 +170,7 @@
     <Compile Include="GameModel\Entities\Components\ModelEntityNavigationNode.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
-    <Compile Include="GameModel\Entities\AbstractComponents\ModelEntityComponentExtensions.cs" />
+    <Compile Include="GameModel\Entities\Extensions\ModelEntityComponentExtensions.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskFactory.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskGoToPosition.cs" />
     <Compile Include="GameModel\Navigation\INavigationMap.cs" />
