--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Common\Messaging\MessageFilterFactory.cs" />
     <Compile Include="Common\Messaging\MessageRule.cs" />
     <Compile Include="Common\Messaging\MessageSystem.cs" />
+    <Compile Include="Common\Tasks\PrioritisedTask.cs" />
     <Compile Include="Common\Tasks\PriorityQueueTask.cs" />
     <Compile Include="Common\Tasks\RetryStrategies\AlwaysRetry.cs" />
     <Compile Include="Common\Tasks\RetryStrategies\IRetryStrategy.cs" />
