Started work on SequenceTask, and fixed a bug in MobileComponent.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Common\Tasks\RetryStrategies\AlwaysRetry.cs" />
     <Compile Include="Common\Tasks\RetryStrategies\IRetryStrategy.cs" />
     <Compile Include="Common\Tasks\RetryableTask.cs" />
+    <Compile Include="Common\Tasks\SequenceTask.cs" />
     <Compile Include="Common\Util\GreaterComparer.cs" />
     <Compile Include="GameModel\Entities\Interfaces\Components\IExternalComponent.cs" />
     <Compile Include="GameModel\Entities\Interfaces\Components\IMobileComponent.cs" />
