--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -176,13 +176,13 @@
     <Compile Include="GameModel\Entities\PlacementStrategies\IPlacementStrategy.cs" />
     <Compile Include="GameModel\Entities\PlacementStrategies\PlacementStrategyRequireFlatGround.cs" />
     <Compile Include="GameModel\Entities\Extensions\ModelEntityComponentExtensions.cs" />
-    <Compile Include="GameModel\Entities\Tasks\TaskEnterPlaceable.cs" />
-    <Compile Include="GameModel\Entities\Tasks\TaskExitPlaceable.cs" />
+    <Compile Include="GameModel\Entities\Tasks\TaskEnterEntity.cs" />
+    <Compile Include="GameModel\Entities\Tasks\TaskExitEntity.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskFactory.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskFollowPath.cs" />
-    <Compile Include="GameModel\Entities\Tasks\TaskGoToLocalPlaceable.cs" />
+    <Compile Include="GameModel\Entities\Tasks\TaskGoToLocalEntity.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskGoToALocalPosition.cs" />
-    <Compile Include="GameModel\Entities\Tasks\TaskGoToPlaceable.cs" />
+    <Compile Include="GameModel\Entities\Tasks\TaskGoToEntity.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskGoToAPosition.cs" />
     <Compile Include="GameModel\Entities\Tasks\TaskLeavePlaceable.cs" />
     <Compile Include="GameModel\Navigation\INavigationMap.cs" />
