Migrated ResourceMatchmakerTest across from game1666proto4.

--- a/game1666/game1666Test/game1666Test.csproj
+++ b/game1666/game1666Test/game1666Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Common\Maths\TriangleTest.cs" />
     <Compile Include="Common\Maths\Vector2iTest.cs" />
     <Compile Include="Common\Persistence\PropertyPersisterTest.cs" />
+    <Compile Include="GameModel\Matchmaking\ResourceMatchmakerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
