--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -131,6 +131,8 @@
     <Compile Include="Common\Tasks\RetryStrategies\NeverRetry.cs" />
     <Compile Include="Common\Tasks\SequenceTask.cs" />
     <Compile Include="Common\Util\GreaterComparer.cs" />
+    <Compile Include="GameModel\Entities\Blueprints\HomeBlueprint.cs" />
+    <Compile Include="GameModel\Entities\Components\HomeComponent.cs" />
     <Compile Include="GameModel\Entities\Interfaces\Components\IExternalComponent.cs" />
     <Compile Include="GameModel\Entities\Interfaces\Components\IMobileComponent.cs" />
     <Compile Include="GameModel\Entities\Interfaces\Components\IModelContextComponent.cs" />
