Added spawner blueprints and continued working on spawner components.

--- a/game1666/game1666/game1666.csproj
+++ b/game1666/game1666/game1666.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Common\Tasks\SequenceTask.cs" />
     <Compile Include="Common\Util\GreaterComparer.cs" />
     <Compile Include="GameModel\Entities\Blueprints\HomeBlueprint.cs" />
+    <Compile Include="GameModel\Entities\Blueprints\SpawnerBlueprint.cs" />
     <Compile Include="GameModel\Entities\Components\HomeComponent.cs" />
     <Compile Include="GameModel\Entities\Components\SpawnerComponent.cs" />
     <Compile Include="GameModel\Entities\Interfaces\Components\IExternalComponent.cs" />
